# license-plate-detection-opencv-yolov8

./: .gitignore  CMakeLists.txt  README.md  export_model.py  main.cpp  test_onnx.py  yolov8.cpp
